--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "prestart": "npm install",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest"
   },
   "keywords": [
     "swagger"
@@ -17,5 +18,8 @@
     "swagger-client": "^3.8.25",
     "swagger-model-validator": "^3.0.10",
     "swagger-tools": "0.10.1"
+  },
+  "devDependencies": {
+    "jest": "^24.7.1"
   }
 }
